--- a/_PREPROCESS/haml/index.haml
+++ b/_PREPROCESS/haml/index.haml
@@ -1,5 +1,6 @@
 !!!
-%html{'data-ng-app' => ''}
+%html{:lang => 'de', 'data-ng-app' => ''}
+
   %head
     %meta{:charset => 'utf-8'}
     %meta{'http-equiv' => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
@@ -14,7 +15,7 @@
 
     %link{:rel => 'stylesheet', :href => './stylesheets/application.css'}
     %script{:src => './javascripts/angular.min.js'}
-    %script{:src => './javascriptss/application.js'}
+    %script{:src => './javascripts/application.js'}
   %body
     %div{'data-ng-controller' => 'FooController'}
       %p{'data-ng-model' => 'foo'}
