--- a/_PREPROCESS/sass/application.scss
+++ b/_PREPROCESS/sass/application.scss
@@ -1,3 +1,23 @@
-.test{
-  color: red;
-}
+// skeleton-Sass V0.1
+// Author: Robert Pearce
+// www.robertwpearce.com
+//
+// Original project info:
+// Skeleton V1.2
+// Copyright 2011, Dave Gamache
+// www.getskeleton.com
+// Free to use under the MIT license.
+// http://www.opensource.org/licenses/mit-license.php
+// 6/20/2012
+
+@import "general/variables";
+@import "general/mixins";
+
+@import "base/base";
+
+@import "layout/layout";
+
+@import "skeleton/skeleton";
+
+@import "site/site";
+
